--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,7 +10,8 @@
 		"label.tsx",
 		"input.tsx",
 		"form.tsx",
-		"dialog.tsx"
+		"dialog.tsx",
+		"avatar.tsx"
 	],
 	"scripts": {
 		"lint": "TIMING=1 eslint"
@@ -22,6 +23,7 @@
 	},
 	"dependencies": {
 		"@paperplane/utils": "*",
+		"@radix-ui/react-avatar": "^1.0.3",
 		"@radix-ui/react-dialog": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-label": "^2.0.2",
