--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -8,6 +8,7 @@
 	"files": [
 		"src",
 		"layouts",
+		"navbar",
 		"ThemeToggle.tsx"
 	],
 	"scripts": {
@@ -24,6 +25,7 @@
 		"@paperplane/ui": "*",
 		"@paperplane/utils": "*",
 		"axios": "^1.5.0",
+		"cookies-next": "3.0.0",
 		"formik": "^2.4.3",
 		"framer-motion": "^10.16.1",
 		"huge-uploader": "^1.0.6",
