--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,10 @@
 		"avatar.tsx",
 		"sheet.tsx",
 		"table.tsx",
-		"skeleton.tsx"
+		"skeleton.tsx",
+		"toast.tsx",
+		"toaster.tsx",
+		"use-toast.ts"
 	],
 	"scripts": {
 		"lint": "TIMING=1 eslint"
@@ -26,6 +29,7 @@
 	},
 	"dependencies": {
 		"@paperplane/utils": "*",
+		"@radix-ui/react-toast": "^1.1.4",
 		"@radix-ui/react-avatar": "^1.0.3",
 		"@radix-ui/react-dialog": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
