--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.1",
 		"@next/font": "13.4.19",
+		"@tanstack/react-table": "8.9.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"lucide-react": "^0.272.0",
