--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,7 +19,8 @@
 		"toaster.tsx",
 		"use-toast.ts",
 		"switch.tsx",
-		"checkbox.tsx"
+		"checkbox.tsx",
+		"tabs.tsx"
 	],
 	"scripts": {
 		"lint": "TIMING=1 eslint"
@@ -39,6 +40,7 @@
 		"@radix-ui/react-select": "^1.2.2",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-toast": "^1.1.4"
 	},
 	"devDependencies": {
