--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,7 +21,8 @@
 		"switch.tsx",
 		"checkbox.tsx",
 		"tabs.tsx",
-		"textarea.tsx"
+		"textarea.tsx",
+		"tooltip.tsx"
 	],
 	"scripts": {
 		"lint": "TIMING=1 eslint"
@@ -42,7 +43,8 @@
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-switch": "^1.0.3",
 		"@radix-ui/react-tabs": "^1.0.4",
-		"@radix-ui/react-toast": "^1.1.4"
+		"@radix-ui/react-toast": "^1.1.4",
+		"@radix-ui/react-tooltip": "^1.0.6"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.21",
