--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,6 +34,7 @@
 	},
 	"dependencies": {
 		"@paperplane/utils": "*",
+		"@radix-ui/react-alert-dialog": "^1.0.4",
 		"@radix-ui/react-avatar": "^1.0.3",
 		"@radix-ui/react-checkbox": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.4",
