--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
 		"cors": "^2.8.5",
 		"file-saver": "^2.0.5",
 		"formik": "^2.4.3",
+		"ms": "^2.1.3",
 		"next-seo": "^6.1.0",
 		"rc-progress": "^3.5.1",
 		"react-dropzone": "^14.2.3",
@@ -39,6 +40,7 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.13",
 		"@types/file-saver": "^2.0.5",
+		"@types/ms": "^0.7.31",
 		"@types/node": "^18.17.11",
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
