--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,7 +9,8 @@
 		"navbar",
 		"Context",
 		"glitch",
-		"ThemeToggle.tsx"
+		"ThemeToggle.tsx",
+		"progress-circle.tsx"
 	],
 	"scripts": {
 		"lint": "TIMING=1 eslint"
@@ -25,7 +26,8 @@
 		"@paperplane/ui": "*",
 		"@paperplane/utils": "*",
 		"axios": "^1.5.0",
-		"ms": "^2.1.3"
+		"ms": "^2.1.3",
+		"rc-progress": "^3.5.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.21",
