--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,6 +22,7 @@
 		"busboy": "^1.6.0",
 		"colorette": "^2.0.20",
 		"cookie-parser": "^1.4.6",
+		"cors": "2.8.5",
 		"cron": "^2.4.3",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
@@ -46,6 +47,7 @@
 	"devDependencies": {
 		"@types/busboy": "^1.5.0",
 		"@types/cookie-parser": "^1.4.4",
+		"@types/cors": "2.8.14",
 		"@types/cron": "^2.0.1",
 		"@types/express": "^4.17.17",
 		"@types/express-rate-limit": "^6.0.0",
