--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,28 +17,18 @@
 		"react-dom": "^18.2.0"
 	},
 	"dependencies": {
-		"@paperplane/buttons": "*",
 		"@paperplane/components": "*",
-		"@paperplane/forms": "*",
 		"@paperplane/logo": "*",
 		"@paperplane/swr": "*",
 		"@paperplane/ui": "*",
 		"@paperplane/utils": "*",
 		"axios": "^1.5.0",
-		"cors": "^2.8.5",
 		"file-saver": "^2.0.5",
-		"formik": "^2.4.3",
 		"ms": "^2.1.3",
-		"next-seo": "^6.1.0",
-		"rc-progress": "^3.5.1",
 		"react-dropzone": "^14.2.3",
-		"react-spinners": "^0.13.8",
-		"react-syntax-highlighter": "^15.5.0",
-		"react-toastify": "^9.1.3",
-		"yup": "^1.2.0"
+		"react-syntax-highlighter": "^15.5.0"
 	},
 	"devDependencies": {
-		"@types/cors": "^2.8.14",
 		"@types/file-saver": "^2.0.5",
 		"@types/ms": "^0.7.31",
 		"@types/node": "^18.17.15",
