--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -21,11 +21,10 @@
 		"react-dom": "18.2.0"
 	},
 	"dependencies": {
-		"@paperplane/forms": "*",
-		"@paperplane/navbar": "*",
 		"@paperplane/ui": "*",
 		"@paperplane/utils": "*",
 		"axios": "^1.5.0",
+		"cookies-next": "4.0.0",
 		"ms": "^2.1.3",
 		"rc-progress": "^3.5.1"
 	},
